--- a/Blabla.html
+++ b/Blabla.html
@@ -47,7 +47,7 @@
     
     <div id="imageContainer">
         <div class="image-item">
-            <img src="Calm_emoji.jpg" id="Calm">
+            <img src="calm_emoji.jpg" id="Calm">
         </div>
         <div class="image-item">
             <img src="angry_symbol.jpg" id="Angry">
