--- a/Blabla.html
+++ b/Blabla.html
@@ -65,7 +65,7 @@
     
     <div id="imageContainer">
         <div class="image-item">
-            <img src="Calm_emoji.jpg" id="Calm" alt="Calm">
+            <img src="calm_emoji.jpg" id="Calm" alt="Calm">
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
