--- a/Blabla.html
+++ b/Blabla.html
@@ -50,9 +50,14 @@
             z-index: -1;
         }
 
+        .image-item h3 {
+            color: #fff;
+            margin-top: 0.5em;
+        }
+
         #voteCount {
-            background-color: black; /* Change the background color to black */
-            color: yellow; /* Change the text color to yellow */
+            background-color: black;
+            color: yellow;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 10px;
@@ -66,26 +71,32 @@
     <div id="imageContainer">
         <div class="image-item">
             <img src="calm_emoji.jpg" id="Calm" alt="Calm">
+            <h3>Calm</h3>
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
             <img src="angry_symbol.jpg" id="Angry" alt="Angry">
+            <h3>Angry</h3>
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
             <img src="hope_symbol.jpg" id="Hopeful" alt="Hopeful">
+            <h3>Hopeful</h3>
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
             <img src="passionate_symbol.jpg" id="Passionate" alt="Passionate">
+            <h3>Passionate</h3>
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
             <img src="scared_symbol.jpg" id="Scared" alt="Scared">
+            <h3>Scared</h3>
             <div class="image-divider"></div>
         </div>
         <div class="image-item">
             <img src="happy_symbol.jpg" id="Happy" alt="Happy">
+            <h3>Happy</h3>
             <div class="image-divider"></div>
         </div>
     </div>
